# music-dl

./: .gitignore  README.org  main.py  pyproject.toml
music_dl/: config.py  downloader.py
music_dl/scrapers/: __init__.py  albumoftheyear.py  bandcamp.py  base.py  karnaval.py  kralmuzik.py  lastfm.py  reddit.py  trtmuzik.py  ytchannel.py
