[project]
name = "music-dl"
version = "0.1.0"
description = "A tool to discover and download music."
requires-python = ">=3.8"
dependencies = [
    "curl-cffi>=0.9.0",
    "httpx[http2]",
    "parsel",
    "yt-dlp",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
